# zipress

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
engine/: Dockerfile  pyproject.toml
engine/app/: config.py  main.py  schemas.py
engine/app/routers/: layout.py
engine/app/services/: guide_drawer.py  image_utils.py  layout_engine.py
engine/tests/: test_api.py  test_layout_engine.py
web/: Dockerfile  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/auth/[...all]/: route.ts
web/src/app/api/engine/[...path]/: route.ts
web/src/app/app/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/db/: schema.ts
web/src/lib/: auth.ts  db.ts  engine-api.ts
web/src/stores/: layout-store.ts
